core/unpackaged/main/default/objects/dlrs__LookupChild__c/dlrs__LookupChild__c.object-meta.xml
<CustomObject>
    <label>Lookup Child</label>
    <nameField>
        <label>Lookup Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Children</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>