core/unpackaged/main/default/objects/dlrs__LookupChild__c/fields/dlrs__Amount__c.field-meta.xml
<CustomField>
    <fullName>dlrs__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>