core/unpackaged/main/default/objects/dlrs__LookupChild__c/fields/dlrs__Description2__c.field-meta.xml
<CustomField>
    <fullName>dlrs__Description2__c</fullName>
    <label>Description 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>