core/unpackaged/main/default/objects/dlrs__LookupChild__c/fields/dlrs__Description__c.field-meta.xml
<CustomField>
    <fullName>dlrs__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>