core/unpackaged/main/default/objects/dlrs__LookupChild__c/fields/dlrs__LookupParent2__c.field-meta.xml
<CustomField>
    <fullName>dlrs__LookupParent2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Parent 2</label>
    <referenceTo>dlrs__LookupParent__c</referenceTo>
    <relationshipLabel>Lookup Children (Lookup Parent 2)</relationshipLabel>
    <relationshipName>LookupChildren2</relationshipName>
    <type>Lookup</type>
</CustomField>