core/unpackaged/main/default/objects/dlrs__LookupChild__c/fields/dlrs__LookupParent__c.field-meta.xml
<CustomField>
    <fullName>dlrs__LookupParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Parent</label>
    <referenceTo>dlrs__LookupParent__c</referenceTo>
    <relationshipLabel>Lookup Children</relationshipLabel>
    <relationshipName>LookupChildren</relationshipName>
    <type>Lookup</type>
</CustomField>